-- arch-tag: XTraverse main description file
Name:           xtraverse
Version:        0.0.0.1
Synopsis:       A collection of tools for processing XML with Haskell and lens.
Description:    XTraverse is basically a retread of HXT (the Haskell XML
                Toolbox) using the powerful lens and traversal approach instead
                of arrows as an organizing principle.  Like HXT, it uses a
                generic data model for representing all aspects of an XML
                document, including the DTD subset and processing instructions.
                It contains a validating XML parser in the core and extension
                libraries provide HTML parsing, XXX NAMESPACE SUPPORT XXX, an
                XPath expression evaluator, an XSLT interpreter, a RelaxNG
                schema validator, and functions for serialization and
                deserialization of user-defined data.
                This package contains the core functionality,
                xtraverse-curl, xtraverse-tagsoup, xtraverse-relaxng,
                xtraverse-xpath, xtraverse-xslt, hxt-regex-xmlschema contain
                the extensions.
                hxt-unicode contains encoding and decoding functions,
                hxt-charproperties char properties for unicode and XML.
                .
                Initial version: forked from HXT 9.3.1.1
License:        MIT
License-file:   LICENSE
Author:         Uwe Schmidt, Martin Schmidt, Torben Kuseler, James Deikun
Maintainer:     James Deikun <james@place.org>
Stability:      Experimental
Category:       XML
-- Homepage:       http://www.fh-wedel.de/~si/HXmlToolbox/index.html
Copyright:      Copyright (c) 2005-2012 Uwe Schmidt, (c) 2013 James Deikun
Build-type:     Simple
Cabal-version:  >=1.8

extra-source-files:
 examples/arrows/absurls/AbsURIs.hs
 examples/arrows/absurls/lousy.html
 examples/arrows/absurls/Makefile
 examples/arrows/absurls/ProcessDocument.hs
 examples/arrows/AGentleIntroductionToHXT/.ghci
 examples/arrows/AGentleIntroductionToHXT/Makefile
 examples/arrows/AGentleIntroductionToHXT/PicklerExample/Baseball.hs
 examples/arrows/AGentleIntroductionToHXT/PicklerExample/Makefile
 examples/arrows/AGentleIntroductionToHXT/PicklerExample/new-simple2.xml
 examples/arrows/AGentleIntroductionToHXT/PicklerExample/simple2.xml
 examples/arrows/AGentleIntroductionToHXT/SimpleExamples.hs
 examples/arrows/dtd2hxt/DTDtoHXT.hs
 examples/arrows/dtd2hxt/.ghci
 examples/arrows/dtd2hxt/Makefile
 examples/arrows/HelloWorld/bye.xml
 examples/arrows/HelloWorld/HelloWorld.hs
 examples/arrows/HelloWorld/hello.xml
 examples/arrows/HelloWorld/Makefile
 examples/arrows/HelloWorld/Mini.hs
 examples/arrows/hparser/emptyElements.html
 examples/arrows/hparser/example1.xml
 examples/arrows/hparser/example1CRLF.xml
 examples/arrows/hparser/HXmlParser.hs
 examples/arrows/hparser/invalid1.xml
 examples/arrows/hparser/invalid2.rng
 examples/arrows/hparser/invalid3.rng
 examples/arrows/hparser/invalid.xml
 examples/arrows/hparser/lousy.html
 examples/arrows/hparser/Makefile
 examples/arrows/hparser/namespace0.xml
 examples/arrows/hparser/namespace1.xml
 examples/arrows/hparser/valid1.rng
 examples/arrows/hparser/valid1.xml
 examples/arrows/performance/GenDoc.hs
 examples/arrows/performance/Makefile
 examples/arrows/pickle/Makefile
 examples/arrows/pickle/PickleTest.hs
 examples/xhtml/tmp.xml
 examples/xhtml/xhtml1-frameset.dtd
 examples/xhtml/xhtml1-strict.dtd
 examples/xhtml/xhtml1-transitional.dtd
 examples/xhtml/xhtml-lat1.ent
 examples/xhtml/xhtml-special.ent
 examples/xhtml/xhtml-symbol.ent
 examples/xhtml/xhtml.xml

library
 exposed-modules:
  Control.Arrow.ArrowExc,
  Control.Arrow.ArrowIO,
  Control.Arrow.ArrowIf,
  Control.Arrow.ArrowList,
  Control.Arrow.ArrowNF,
  Control.Arrow.ArrowNavigatableTree,
  Control.Arrow.ArrowState,
  Control.Arrow.ArrowTree,
  Control.Arrow.IOListArrow,
  Control.Arrow.IOStateListArrow,
  Control.Arrow.ListArrow,
  Control.Arrow.ListArrows,
  Control.Arrow.NTreeEdit,
  Control.Arrow.StateListArrow,
  Control.FlatSeq,
  Data.AssocList,
  Data.Atom,
  Data.Function.Selector,
  Data.Tree.Class,
  Data.Tree.NTree.TypeDefs,
  Data.Tree.NTree.Edit,
  Data.Tree.NTree.Zipper.TypeDefs,
  Data.Tree.NavigatableTree.Class,
  Data.Tree.NavigatableTree.XPathAxis,
  Text.XML.HXT.Arrow.Binary,
  Text.XML.HXT.Arrow.DTDProcessing,
  Text.XML.HXT.Arrow.DocumentInput,
  Text.XML.HXT.Arrow.DocumentOutput,
  Text.XML.HXT.Arrow.Edit,
  Text.XML.HXT.Arrow.GeneralEntitySubstitution,
  Text.XML.HXT.Arrow.Namespace,
  Text.XML.HXT.Arrow.ParserInterface,
  Text.XML.HXT.Arrow.Pickle,
  Text.XML.HXT.Arrow.Pickle.DTD,
  Text.XML.HXT.Arrow.Pickle.Schema,
  Text.XML.HXT.Arrow.Pickle.Xml,
  Text.XML.HXT.Arrow.ProcessDocument,
  Text.XML.HXT.Arrow.ReadDocument,
  Text.XML.HXT.Arrow.WriteDocument,
  Text.XML.HXT.Arrow.XmlArrow,
  Text.XML.HXT.Arrow.XmlOptions,
  Text.XML.HXT.Arrow.XmlRegex,
  Text.XML.HXT.Arrow.XmlState,
  Text.XML.HXT.Arrow.XmlState.ErrorHandling,
  Text.XML.HXT.Arrow.XmlState.MimeTypeTable,
  Text.XML.HXT.Arrow.XmlState.RunIOStateArrow,
  Text.XML.HXT.Arrow.XmlState.TraceHandling,
  Text.XML.HXT.Arrow.XmlState.TypeDefs,
  Text.XML.HXT.Arrow.XmlState.URIHandling,
  Text.XML.HXT.Arrow.XmlState.SystemConfig,
  Text.XML.HXT.Core,
  Text.XML.HXT.DOM.FormatXmlTree,
  Text.XML.HXT.DOM.Interface,
  Text.XML.HXT.DOM.MimeTypeDefaults,
  Text.XML.HXT.DOM.MimeTypes,
  Text.XML.HXT.DOM.QualifiedName,
  Text.XML.HXT.DOM.ShowXml,
  Text.XML.HXT.DOM.TypeDefs,
  Text.XML.HXT.DOM.Util,
  Text.XML.HXT.DOM.XmlKeywords,
  Text.XML.HXT.DOM.XmlNode,
  Text.XML.HXT.DTDValidation.AttributeValueValidation,
  Text.XML.HXT.DTDValidation.DTDValidation,
  Text.XML.HXT.DTDValidation.DocTransformation,
  Text.XML.HXT.DTDValidation.DocValidation,
  Text.XML.HXT.DTDValidation.IdValidation,
  Text.XML.HXT.DTDValidation.RE,
  Text.XML.HXT.DTDValidation.TypeDefs,
  Text.XML.HXT.DTDValidation.Validation,
  Text.XML.HXT.DTDValidation.XmlRE,
  Text.XML.HXT.IO.GetFILE,
  Text.XML.HXT.Parser.HtmlParsec,
  Text.XML.HXT.Parser.ProtocolHandlerUtil,
  Text.XML.HXT.Parser.XhtmlEntities,
  Text.XML.HXT.Parser.XmlCharParser,
  Text.XML.HXT.Parser.XmlDTDParser,
  Text.XML.HXT.Parser.XmlDTDTokenParser,
  Text.XML.HXT.Parser.XmlEntities,
  Text.XML.HXT.Parser.XmlParsec,
  Text.XML.HXT.Parser.XmlTokenParser,
  Text.XML.HXT.XMLSchema.DataTypeLibW3CNames,
  Text.XML.HXT.Version

 hs-source-dirs: src

 ghc-options: -Wall
 ghc-prof-options: -auto-all -caf-all

 extensions: MultiParamTypeClasses DeriveDataTypeable FunctionalDependencies FlexibleInstances

 build-depends: base       >= 4   && < 5,
                containers >= 0.2 && < 1,
                directory  >= 1   && < 2,
                filepath   >= 1   && < 2,
                parsec     >= 2.1 && < 4,
                HUnit      >= 1.2 && < 2,
                mtl        >= 2   && < 3,
                network    >= 2.4 && < 3,
                deepseq    >= 1.1 && < 2,
                bytestring >= 0.9 && < 1,
                binary     >= 0.5 && < 1,
                hxt-charproperties  >= 9.1    && < 10,
                hxt-unicode         >= 9.0.1  && < 10,
                hxt-regex-xmlschema >= 9      && < 10

Source-Repository head
  Type:     git
  Location: git://github.com/xplat/xtraverse.git
